# noawclg

./: .gitignore  .~lock.jua_.xlsx#  .~lock.test.xlsx#  Pipfile  README.md  pyproject.toml  save_dt.py  setup.py  studio_noawclg.ipynb  test_data.py  test_key.py  test_place.py  test_point.py  test_v.py
data_info/: JUAZEIRO_BA.json  JUAZEIRO_BA.xlsx  juazeiro_ba.json
help_versions/_8.0/: help.md  libs_install.txt  py_poetry_old
noawclg/: main.py  plot.py
