[tool.poetry]
name = "noawclg"
version = "0.1.0"
description = "a lib for working data from NOAA DATABASE"
authors = ["reinanbr <perseu912@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
netcdf4 = "1.5.7"
xarray = "0.20.1"
openpyxl = "^3.0.10"
matplotlib = "^3.6.2"
geopy = "^2.3.0"
numpy = "^1.24.1"
kitano = "^0.0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
